--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -4,81 +4,101 @@
 {% load static %}
 
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-    </ol>
-    <div class="carousel-inner">
+  <ol class="carousel-indicators">
+      <li data-target="#carouselExampleFade" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleFade" data-slide-to="1"></li>
+      <li data-target="#carouselExampleFade" data-slide-to="2"></li>
+      <li data-target="#carouselExampleFade" data-slide-to="3"></li>
+      <li data-target="#carouselExampleFade" data-slide-to="4"></li>
+  </ol>
+  <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100 h-100vh" src="{% static 'nj hp.svg' %}" alt="First slide">
+          <img class="d-block w-100 h-100vh" src="{% static 'nj hp.svg' %}" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static '2hp.svg' %}" alt="Second slide">
+          <img class="d-block w-100 h-100vh" src="{% static '2hp.svg' %}" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static '3hp.svg' %}" alt="Third slide">
+          <img class="d-block w-100 h-100vh" src="{% static '3hp.svg' %}" alt="Third slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static '4hp.svg' %}" alt="Fourth slide">
+          <img class="d-block w-100 h-100vh" src="{% static '4hp.svg' %}" alt="Fourth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 h-100vh" src="{% static '5hp.svg' %}" alt="Fifth slide">
+          <img class="d-block w-100 h-100vh" src="{% static '5hp.svg' %}" alt="Fifth slide">
       </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
-  </div>
+  </a>
+</div>
 
-  <div class="container my-4">
-    <h2 class="my-4">Shop by Category</h2>
-    <div class="row mt-4 d-flex justify-content-between">
-        <div class="col-sm-3 my-4 mx-4">
-          <a href="Albums">
-            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
-              <img src="{% static 'Albums.png'%}">
-              <p style="text-align: center; margin-top: 10px; font-weight: bold;">Albums</p>
-            </div>
-        </div>
-        <div class="col-sm-3 my-4 mx-4">
-          <a href="Photobooks">
-            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
-              <img src="{% static 'Photobooks.png'%}">
-              <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Photobooks</p>
-            </div>
-          </div>
-        <div class="col-sm-3 my-4 mx-4">
-          <a href="Lightsticks">
-            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
-              <img src="{% static 'Lightsticks.png'%}">
-              <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Lightsticks</p>
-            </div>
-        </div>
-        <div class="col-sm-3 my-4 mx-4">
-          <a href="Seasons Greeting">
-            <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
-              <img src="{% static 'Seasons Greetings.png'%}">
-              <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Season's Greetings</p>
-            </div>
-          </a>
-          </div>
-          <div class="col-sm-3 my-4 mx-4">
-            <a href="Other Merch">
-              <div class="card-body" style="width: 215px; height: 250px; border-radius: 15px; background:#FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
-                <img src="{% static 'Other Merch.png'%}">
-                <p style="text-align: center; margin-top: 10px; font-weight: bold; text-decoration: none;">Other Merch</p>
+<div class="container my-4">
+  <h2 class="my-4">Shop by Category</h2>
+  <div class="row justify-content-start">
+      <div class="col-sm-3 my-4">
+          <a href="Albums" class="text-decoration-none">
+              <div class="card h-100" style="border-radius: 15px; background: #FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+                  <img src="{% static 'Albums.png'%}" class="card-img-top" alt="Albums">
+                  <div class="card-body text-center">
+                      <p class="font-weight-bold">Albums</p>
+                  </div>
               </div>
-            </a>
+          </a>
       </div>
-    </div>
+
+      <div class="col-sm-3 my-4">
+          <a href="Photobooks" class="text-decoration-none">
+              <div class="card h-100" style="border-radius: 15px; background: #FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+                  <img src="{% static 'Photobooks.png'%}" class="card-img-top" alt="Photobooks">
+                  <div class="card-body text-center">
+                      <p class="font-weight-bold">Photobooks</p>
+                  </div>
+              </div>
+          </a>
+      </div>
+
+      <div class="col-sm-3 my-4">
+          <a href="Lightsticks" class="text-decoration-none">
+              <div class="card h-100" style="border-radius: 15px; background: #FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+                  <img src="{% static 'Lightsticks.png'%}" class="card-img-top" alt="Lightsticks">
+                  <div class="card-body text-center">
+                      <p class="font-weight-bold">Lightsticks</p>
+                  </div>
+              </div>
+          </a>
+      </div>
+
+      <div class="col-sm-3 my-4">
+          <a href="Seasons Greeting" class="text-decoration-none">
+              <div class="card h-100" style="border-radius: 15px; background: #FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+                  <img src="{% static 'Seasons Greetings.png'%}" class="card-img-top" alt="Season's Greetings">
+                  <div class="card-body text-center">
+                      <p class="font-weight-bold">Season's Greetings</p>
+                  </div>
+              </div>
+          </a>
+      </div>
+
+      <div class="col-sm-3 my-4">
+          <a href="Other Merch" class="text-decoration-none">
+              <div class="card h-100" style="border-radius: 15px; background: #FFF; box-shadow: 0px 0px 75px 3px rgba(243, 194, 255, 0.45);">
+                  <img src="{% static 'Other Merch.png'%}" class="card-img-top" alt="Other Merch">
+                  <div class="card-body text-center">
+                      <p class="font-weight-bold">Other Merch</p>
+                  </div>
+              </div>
+          </a>
+      </div>
+
+      
   </div>
+</div>
+
 
 {% endblock content %}
